--- a/css/main.css
+++ b/css/main.css
@@ -473,11 +473,13 @@ a:hover {
   align-items: center;
   overflow: hidden;
   position: relative;
+  background: radial-gradient(var(--main-color), #500024);
 }
 .herobanner__container{
   max-width: 1200px;
   margin: auto;
   justify-content: center;
+  z-index: 2;
 }
 nav a {
   text-decoration: none;
@@ -509,6 +511,12 @@ nav {
 .cta{
   color: transparent;
 }
+.herobanner__container h4{
+  opacity: 0;
+  animation: fadeIn 2s;
+  animation-delay: 5s;
+  animation-fill-mode: forwards;
+}
 .fadein{
   animation: fadeIn 1s ;
 }
@@ -525,6 +533,7 @@ nav {
   display: inline-block;
   white-space: pre-wrap;
   font-style: normal;
+
 }
 @keyframes lightsup {
   0% {
@@ -535,7 +544,7 @@ nav {
   }
   100% {
     transform: translate(0, 0);
-    color: var(--contrast-text);
+    color: #fff;
   }
 }
 .particles-js-canvas-el{
@@ -700,6 +709,11 @@ footer{
 }
 #phone {
 opacity: 0;
+  position: relative;
+  z-index: 2;
+}
+h1.cta{
+  font-size: 80px;
 }
 .cta span{
   white-space: nowrap;
@@ -709,7 +723,19 @@ animation-delay: 4s;
   transition: 3s;
   animation: fadeIn 3s;
   animation-fill-mode: forwards;
-  animation-delay: 3s;
+  animation-delay: 5s;
+}
+.herobanner__cta{
+  opacity: 0;
+  animation: fadeIn 3s;
+  animation-fill-mode: forwards;
+  animation-delay: 7s;
+}
+.herobanner__paragraph{
+  opacity: 0;
+  animation: fadeIn 3s;
+  animation-fill-mode: forwards;
+  animation-delay: 7s;
 }
 .herobanner__video{
   position: absolute;
