--- a/css/main.css
+++ b/css/main.css
@@ -706,6 +706,7 @@ footer{
   height: 500px;
   margin: auto;
   background: transparent;
+  filter: drop-shadow(20px 20px 10px #0000005e);
 }
 #phone {
 opacity: 0;
