--- a/css/main.css
+++ b/css/main.css
@@ -298,6 +298,9 @@ section{
   padding-left: 0;
   padding-right: 0;
 }
+.p-0{
+  padding: 0;
+}
 .px-1{
   padding-left: 15px!important;
   padding-right: 15px!important;
@@ -738,6 +741,63 @@ animation-delay: 4s;
   animation-fill-mode: forwards;
   animation-delay: 7s;
 }
+.videobg_one {
+  display: grid;
+  gap: 24px;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  height: 50vh;
+  justify-content: space-evenly;
+  max-width: 500px;
+}
+
+.box1, .box2, .box3 {
+  border-radius: 4px;
+}
+
+.box2 {
+  justify-content: center;
+}
+
+.box1 video {
+  max-width: 100%;
+}
+
+.box2 video {
+  height: 100%;
+  justify-content: center;
+}
+
+.box3 video {
+  height: 100%;
+}
+
+.videobg_one > div {
+  display: flex;
+  overflow: hidden;
+
+}
+.box1 {
+  grid-column: span 10;
+  grid-row: span 5;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+.box2 {
+  grid-column: span 5;
+  grid-row: span 5;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+.box3 {
+  grid-column: span 5;
+  grid-row: span 5;
+}
+
 .herobanner__video{
   position: absolute;
   top: 0;
