--- a/css/main.css
+++ b/css/main.css
@@ -1139,8 +1139,8 @@ h1.cta {
   position: absolute;
   left: 50%;
   width: 220px;
-  top: 70%;
-  transform: translate(-50%, -50%);
+  top: 120px;
+  transform: translate(-50%, 0);
 
 }
 
