--- a/css/main.css
+++ b/css/main.css
@@ -774,9 +774,9 @@ nav {
 }
 
 .cta i {
-    animation: lightsup 2s;
+    animation: lightsup 2s ease-in;
     animation-fill-mode: both;
-    animation-delay: 2s;
+    animation-delay: 0s;
     transition: 1s;
     display: inline-block;
     white-space: pre-wrap;
@@ -1055,13 +1055,13 @@ h1.cta {
     transition: 2s;
     animation: fadeIn 2s;
     animation-fill-mode: forwards;
-    animation-delay: 4s;
+    animation-delay: 3s;
 }
 
 .herobanner__container h5 {
     opacity: 0;
     animation: fadeIn 2s;
-    animation-delay: 3s;
+    animation-delay: 2s;
     animation-fill-mode: forwards;
 }
 
@@ -1070,12 +1070,12 @@ h1.cta {
     opacity: 0;
     animation: fadeIn 2s;
     animation-fill-mode: forwards;
-    animation-delay: 3.5s;
+    animation-delay: 2.3s;
 }
 
 .herobanner__cta {
     opacity: 0;
-    animation: fadeIn 2s;
+    animation: fadeIn 3s;
     animation-fill-mode: forwards;
     animation-delay: 5s;
 }
@@ -1089,7 +1089,7 @@ h1.cta {
     width: 100%;
     justify-content: space-between;
     animation: fadeIn 3s;
-    animation-delay: 4s;
+    animation-delay: 2.6s;
     animation-fill-mode: forwards;
 
 }
