--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,13 @@ section,
 summary {
     display: block;
 }
+
 *:before, *:after {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+
 html {
     color: #222;
     font-size: 1em;
@@ -26,6 +28,7 @@ html {
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
+
 body {
     font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     font-size: 17px;
@@ -33,6 +36,7 @@ body {
     color: #28282a;
     background-color: #ffffff;
 }
+
 body {
     overflow-x: hidden;
 }
@@ -116,9 +120,11 @@ body {
     -ms-user-select: none;
     user-select: none;
 }
-h1,h2,h3,h4,h5,p{
+
+h1, h2, h3, h4, h5, p {
     margin-top: 0;
 }
+
 h1 {
     font-size: 80px;
 }
@@ -131,14 +137,15 @@ h3 {
     font-size: 40px;
     margin-bottom: 60px;
 }
-h4{
-font-size: 34px;
+
+h4 {
+    font-size: 34px;
 }
-h5{
+
+h5 {
     font-size: 21px;
     margin-bottom: 15px;
 }
-
 
 
 ::-moz-selection {
@@ -285,8 +292,6 @@ textarea {
    ========================================================================== */
 
 
-
-
 section {
     padding-top: 120px;
     padding-bottom: 120px;
@@ -391,16 +396,16 @@ section {
 }
 
 .mb-1 {
-    margin-bottom: 30px!important;
+    margin-bottom: 30px !important;
 }
 
 .mb-2 {
-    margin-bottom: 60px!important;
+    margin-bottom: 60px !important;
 }
 
 
 .mb-3 {
-    margin-bottom: 120px!important;
+    margin-bottom: 120px !important;
 }
 
 .mt-1 {
@@ -476,9 +481,11 @@ section {
 .text-contrast {
     color: var(--contrast-text);
 }
-.text-center{
+
+.text-center {
     text-align: center;
 }
+
 .text-white {
     color: #fff;
 }
@@ -858,10 +865,29 @@ h2 {
 }
 
 [class*="gradient-container"] {
-    background-image: radial-gradient(var(--accent-color), var(--main-color), var(--grey-text));
+    background: var(--background-alt);
     background-size: 200% 200%;
     background-repeat: no-repeat;
 
+}
+[class*="gradient-container"] p{
+    color: var(--contrast-text);
+}
+[class*="gradient-container"] svg{
+    fill: var(--main-color);
+}
+
+.svgIcon-large {
+    height: 170px;
+    margin: auto;
+    display: block;
+}
+
+.messaging__icon {
+    height: 300px;
+    fill: url(#grad1);
+    margin: auto;
+    display: block;
 }
 
 .gradient-container svg {
@@ -873,9 +899,11 @@ h2 {
     background-position: right 30px, top right;
 
 }
-a:hover, a:focus{
+
+a:hover, a:focus {
     color: var(--main-color)
 }
+
 .gradient-container__mobile-payment {
     background-size: 75%, 200% 200%;
     background-position: right, top left;
@@ -937,14 +965,17 @@ a:hover, a:focus{
     border-bottom: 1px solid var(--background-alt);
     font-weight: 400;
 }
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
 input[type=number] {
     -moz-appearance: textfield;
 }
+
 .text-input:focus, .text-input:active {
     border: 0;
     border-bottom: 1px solid var(--main-color);
@@ -1094,17 +1125,6 @@ h1.cta {
 
 }
 
-.videobg_one {
-    display: grid;
-    gap: 24px;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(10, 1fr);
-    height: 50vh;
-    justify-content: space-evenly;
-    max-width: 550px;
-}
-
-
 .box1, .box2, .box3 {
     border-radius: 20px;
 }
@@ -1163,14 +1183,14 @@ h1.cta {
 }
 
 .signup-icon {
-    color: var(--main-color);
+    color: var(--background-alt);
+    background: var(--main-color);
     font-weight: 600;
     pointer-events: none;
     width: 80%;
     height: 40px;
     font-size: 17px;
     margin: 10px auto;
-    background: linear-gradient(to bottom,#f2994a, #ee7911);
     text-align: center;
     display: flex;
     align-items: center;
@@ -1276,7 +1296,8 @@ h1.cta {
     transform: translate(-50%, 0);
 
 }
-.block-button{
+
+.block-button {
     padding: 30px;
     border: 2px solid var(--background-default);
     border-radius: 20px;
@@ -1285,26 +1306,31 @@ h1.cta {
     transition: border 0.3s;
     max-height: 274px;
 }
-.block-button:hover{
+
+.block-button:hover {
     padding: 30px;
     border: 2px solid var(--accent-color);
     border-radius: 20px;
 }
-.block-button h5{
+
+.block-button h5 {
     margin-bottom: 0;
 }
-.block-button__icon{
+
+.block-button__icon {
 
     height: 150px;
     margin: auto;
     display: block;
     transition: 0.3s;
-    fill: url(#grad1);
+    fill: var(--accent-color);
     transition: 0.3s;
 }
-a:hover{
-text-decoration: none;
+
+a:hover {
+    text-decoration: none;
 }
+
 .benefit-charging {
     transform: rotate(90deg);
     right: 0;
@@ -1395,10 +1421,22 @@ text-decoration: none;
     width: 100%;
     z-index: 0;
 }
-
 .hero__threeModelContainer {
     position: relative;
+    opacity: 0;
+    height: 350px;
+    width: 350px;
+    background: url(../img/hero__planet.png)var(--main-color);
+    background-blend-mode: screen;
+    border-radius: 50%;
+    animation: fadeIn 2s;
+    animation-fill-mode: forwards;
+    animation-delay: 3s;
+    margin: auto;
 
+}
+.hero__threeModelContainer > canvas{
+    border-radius: 50%;
 }
 
 .staticPhone-left img, .staticPhone-right img, .staticPhone-mobile img {
@@ -1449,7 +1487,6 @@ text-decoration: none;
 .terms h3 {
     margin-top: 60px;
     margin-bottom: 30px;
-    color: var(--main-color);
 }
 
 .terms ul {
@@ -1564,6 +1601,7 @@ label {
     padding: 10px 0;
     border-bottom: 1px solid var(--background-alt);
 }
+
 .btn {
     background: var(--main-color);
     border: 2px solid var(--main-color);
@@ -1571,17 +1609,21 @@ label {
     font-weight: 600;
     transition: 0.3s;
 }
+
 .btn:hover {
-     filter: brightness(1.1);
+    filter: brightness(1.1);
     color: #fff;
- }
-.btn-accent{
+}
+
+.btn-accent {
     background: var(--thirdly-one);
     border: 2px solid var(--thirdly-one);
 }
+
 .btn:active {
     filter: brightness(0.9);
 }
+
 .btn-outline-primary {
     background: none;
     border: 2px solid var(--main-color);
@@ -1595,7 +1637,10 @@ label {
     color: var(--accent-color);
     font-weight: 600;
 }
-
+@keyframes fadeInLeft {
+    0%{transform: translate(200px, 0); opacity: 0}
+    100%{transform: translate(0, 0); opacity: 1}
+}
 @media (max-width: 992px) {
     .cases-dcb .rounded_container {
         height: 230px;
@@ -1769,6 +1814,7 @@ label {
     .footer_second svg {
         margin-bottom: 30px;
     }
+
     nav.mobile-menu a.active::after {
         content: none;
 
@@ -1781,23 +1827,34 @@ label {
     p {
         font-size: 15px;
     }
+    .hero__threeModelContainer{
+        opacity: 0;
+        margin-top: 60px;
+        animation: fadeInLeft 2s;
+        animation-delay: 3s;
+        animation-fill-mode: forwards;
+    }
+    #messaging > .container{
+        display: flex;
+        flex-direction: column;
+    }
 
+    .messaging__icon {
+        height: 150px;
+
+    }
 
     .herobanner {
         padding-top: 30px;
     }
 
     .herobanner__text-container {
-        width: 75%;
         position: relative;
     }
 
-    .hero__threeModelContainer {
-        display: none;
-    }
 
     .herobanner__flow {
-        margin-top: 30px;
+        margin-top: 60px;
     }
 
     section {
@@ -1816,6 +1873,9 @@ label {
     .grid-container > .rounded_container > img.benefit-users {
         top: 120px;
         width: 100%;
+    }
+    .svgIcon-large{
+        margin: 60px auto;
     }
 
     .mb-xs-1 {
